// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfirmationItemDisplayVanilla should render correctly 1`] = `
<div
  className=""
>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="p"
    fontFamily="secondary"
    fontSize="fs14"
    fontWeight="extrabold"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="center"
  >
    hey
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="p"
      fontFamily="secondary"
      fontSize="fs16"
      fontWeight="extrabold"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="center"
    >
      <Component />
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
</div>
`;

exports[`ConfirmationItemDisplayVanilla should render correctly with bold fornt false 1`] = `
<div
  className=""
>
  <Styled(BodyCopy)
    className={null}
    color="text.primary"
    component="p"
    fontFamily="secondary"
    fontSize="fs14"
    fontWeight="extrabold"
    letterSpacing="normal"
    lineHeight="normal"
    link={null}
    textAlign="center"
  >
    hey
    <Styled(BodyCopy)
      className={null}
      color="text.primary"
      component="p"
      fontFamily="secondary"
      fontSize="fs16"
      fontWeight="regular"
      letterSpacing="normal"
      lineHeight="normal"
      link={null}
      textAlign="center"
    >
      <Component />
    </Styled(BodyCopy)>
  </Styled(BodyCopy)>
</div>
`;
